# tree-sitter-rocq

./: .gitignore  CMakeLists.txt  Makefile  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tree-sitter-rocq.pc.in
bindings/c/tree_sitter/: tree-sitter-tree-sitter-rocq.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tree_sitter_rocq/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTreeSitterRocqTests/: TreeSitterTreeSitterRocqTests.swift
src/: grammar.json  node-types.json  parser.c
